--- a/1. Introduction.html
+++ b/1. Introduction.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
-<!-- saved from url=(0060)http://jun.hansung.ac.kr/SWP/PHP/PHP%205%20Introduction.html -->
-<html lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <title>PHP 5 Introduction &amp; Installation</title>
+<html lang="en-US">
+  <head>
+    <meta content="text/html; charset=utf-8" http-equiv="content-type">
+    <title>1. Introduction &amp; Installation</title>
     <style>a.menu_html_intro{font-weight:bold;}</style>
     <meta name="viewport" content="width=device-width">
-    <meta name="Keywords" content="HTML,CSS,XML,JavaScript,DOM,jQuery,ASP.NET,PHP,SQL,colors,tutorial,programming,development,training,learning,quiz,primer,lessons,reference,examples,source code,tryphps,tips,color table,w3c,cascading style sheets,active server pages,Web building,Webmaster">
-    <meta name="Description" content="Free HTML CSS JavaScript DOM jQuery XML AJAX RSS ASP .NET PHP SQL tutorials, references, examples for web building.">
-    <link rel="icon" href="http://jun.hansung.ac.kr/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./PHP Introduction &amp; Installation_files/w3.css">
-    <link rel="stylesheet" type="text/css" href="./PHP Introduction &amp; Installation_files/stdtheme.css">
+    <meta name="Keywords" content="HTML,PHP,SQL,tutorial,programming,development,Web building,Webmaster">
+    <link rel="stylesheet" href="w3.css">
   </head>
   <body>
     <div id="belowTopnav" style="width:auto">
       <div id="page" style="width:auto; padding:30px; margin:10px;">
         <div>
           <div id="main" style="width:auto">
-            <h1>PHP 5 <span class="color_h1">Introduction &amp; </span><span class="color_h1">Installation</span></h1>
-            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="http://jun.hansung.ac.kr/SWP/PHP/default.asp">«
-                Previous</a> <a class="w3-right w3-btn" href="http://jun.hansung.ac.kr/SWP/PHP/PHP%205%20Syntax.html">Next
-                Chapter »</a> </div>
+            <h1>1. <span class="color_h1">Introduction &amp; </span><span class="color_h1">Installation</span></h1>
+            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="index.html">« Previous</a> 
+                <a class="w3-right w3-btn" href="2. Syntax.html">Next »</a> </div>
             <hr>
             <p class="intro">&nbsp;PHP 스크립트는 서버에서 실행됩니다.</p>
             <hr>
@@ -41,7 +37,9 @@
             <table class="lamp" id="table1">
               <tbody>
                 <tr>
-                  <th style="width:34px"><img src="./PHP Introduction &amp; Installation_files/lamp.jpg" alt="Note" style="height:32px;width:32px"></th>
+                  <th style="width:34px"><img src="http://www.w3schools.com/images/lamp.jpg"
+
+                      alt="Note" style="height:32px;width:32px"></th>
                   <td>&nbsp; PHP 는 초보자에게는 간단하며, 또한 전문 프로그래머를 위한 다양한 고급 기능을
                     제공합니다.</td>
                 </tr>
@@ -82,6 +80,16 @@
                   www.php.net</a></li>
               <li>PHP 는 배우기 쉽고, 서버 측에서 효율적으로 실행된다.</li>
             </ul>
+            <hr>
+            <h2>PHP 7의 새로운 기능</h2>
+            <ul>
+              <li>PHP 7은 이전의 인기있는 stable 릴리스 (PHP 5.6)보다 훨씬 빠릅니다.</li>
+              <li>PHP 7은 오류 처리를 개선했습니다.</li>
+              <li>PHP 7은 함수 인수에 대해 더 엄격한 유형 선언을 지원합니다.</li>
+              <li>PHP 7은 새로운 연산자를 지원합니다 (예 : 우주선 연산자 : <=>)</li>
+            </ul>
+
+
             <div id="main">
               <hr>
               <h2>What Do I Need?</h2>
@@ -107,24 +115,30 @@
                 <li>install PHP</li>
                 <li>install a database, such as MySQL</li>
               </ul>
-              <p>공식 PHP 웹 사이트 (PHP.net) 에는 PHP 설치 지침이 제공 됩니다.: <a target="_blank" href="http://php.net/manual/en/install.php">http://php.net/manual/en/install.php</a></p>
+              <p>공식 PHP 웹 사이트 (PHP.net) 에는 PHP 설치 지침이 제공 됩니다.: <a target="_blank"
+
+                  href="http://php.net/manual/en/install.php">http://php.net/manual/en/install.php</a></p>
               <table class="lamp" id="table1">
                 <tbody>
                   <tr>
-                    <th style="width:34px"><img src="./PHP Introduction &amp; Installation_files/lamp.jpg" alt="Note" style="height:32px;width:32px"></th>
+                    <th style="width:34px"><img src="http://www.w3schools.com/images/lamp.jpg"
+
+                        alt="Note" style="height:32px;width:32px"></th>
                     <td>
                       <p><b>&nbsp;Tip:</b> Windows 에서 PHP 구동해서 즉시 실행하려면, 다음을 수행
-                        합니다:&nbsp; <a href="http://www.microsoft.com/web/webmatrix/" target="_blank">Download WebMatrix</a></p>
+                        합니다:&nbsp; <a href="http://www.microsoft.com/web/webmatrix/"
+
+                          target="_blank">Download WebMatrix</a></p>
                     </td>
                   </tr>
                 </tbody>
               </table>
               <br>
               <br>
-              <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="http://jun.hansung.ac.kr/SWP/PHP/default.asp">«
-                  Previous</a> <a class="w3-right w3-btn" href="http://jun.hansung.ac.kr/SWP/PHP/PHP%205%20Syntax.html">Next
-                  Chapter »</a> </div>
-              <hr></div>
+            <div class="w3-clear nextprev"> 
+              <a class="w3-left w3-btn" href="index.html">« Previous</a> 
+              <a class="w3-right w3-btn" href="2. Syntax.html">Next »</a> 
+            </div>
             <br>
           </div>
         </div>
@@ -133,6 +147,5 @@
     </div>
     <br>
     <hr style="height:5px;">
-  
-
-</body></html>
+  </body>
+</html>
