--- a/2. Syntax.html
+++ b/2. Syntax.html
@@ -105,6 +105,7 @@
               누군가에 의해 읽히는 것이다!<br>
             </p>
             <p>PHP는 주석으로 세 가지 방법을 지원합니다 :</p>
+
             <div class="w3-example">
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> &lt;!DOCTYPE html&gt;<br>
@@ -131,8 +132,24 @@
               <br>
               <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_comments2">Run
                 example »</a></div>
+
             <br>
+            <div class="w3-example">
+<h3>Example</h3>
+<p>주석을 사용하여 코드의 일부 제외할 수 있다.:</p>
+<div class="w3-code htmlHigh notranslate">
+<span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>!DOCTYPE<span class="attributecolor" style="color:red"> html</span><span class="tagcolor" style="color:mediumblue">&gt;</span></span><br>
+<span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>html<span class="tagcolor" style="color:mediumblue">&gt;</span></span><br>
+<span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>body<span class="tagcolor" style="color:mediumblue">&gt;</span></span><br><br>
+<span class="phpcolor" style="color:black"><span class="phptagcolor" style="color:red">&lt;?php</span><br><span class="phpnumbercolor" style="color:red">
+</span>  <span class="commentcolor" style="color:green">// You can also use comments to leave out parts of a code line<br></span>$x = <span class="phpnumbercolor" style="color:red">5</span> <span class="commentcolor" style="color:green">/* + 15 */</span> + <span class="phpnumbercolor" style="color:red">5</span>;<br><span class="phpkeywordcolor" style="color:mediumblue">echo</span> $x;<br><span class="phptagcolor" style="color:red">?&gt;</span></span><br><br>
+<span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/body<span class="tagcolor" style="color:mediumblue">&gt;</span></span><br>
+<span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/html<span class="tagcolor" style="color:mediumblue">&gt;</span></span>
+ </div>
+<a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_comments3">Try it Yourself »</a>
+</div>
             <br>
+
             <div class="w3-clear nextprev"> 
               <a class="w3-left w3-btn" href="1.%20Introduction.html">« Previous</a> 
               <a class="w3-right w3-btn" href="3.%20Variables.html">Next »</a> 
