--- a/3. Variables.html
+++ b/3. Variables.html
@@ -2,24 +2,22 @@
 <html lang="en-US">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <title>PHP 5 Variables</title>
+    <title>3. Variables</title>
     <style>a.menu_html_intro{font-weight:bold;}</style>
     <meta name="viewport" content="width=device-width">
-    <meta name="Keywords" content="HTML,CSS,XML,JavaScript,DOM,jQuery,ASP.NET,PHP,SQL,colors,tutorial,programming,development,training,learning,quiz,primer,lessons,reference,examples,source code,tryphps,tips,color table,w3c,cascading style sheets,active server pages,Web building,Webmaster">
-    <meta name="Description" content="Free HTML CSS JavaScript DOM jQuery XML AJAX RSS ASP .NET PHP SQL tutorials, references, examples for web building.">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="http://www.w3schools.com/stdtheme.css">
-    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+    <meta name="Keywords" content="HTML,PHP,SQL,tutorial,programming,development,Web building,Webmaster">
+    <link rel="stylesheet" href="w3.css">
   </head>
   <body>
     <div id="belowTopnav" style="width:auto">
       <div id="page" style="width:auto; padding:30px; margin:10px;">
         <div>
           <div id="main" style="width:auto">
-            <h1>PHP 5 <span class="color_h1">Variables</span></h1>
-            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="PHP%205%20Syntax.html">«
-                Previous</a> <a class="w3-right w3-btn" href="PHP%205%20Echo%20and%20Print%20Statements.html">Next
-                Chapter »</a> </div>
+            <h1>3. <span class="color_h1">Variables</span></h1>
+            <div class="w3-clear nextprev"> 
+              <a class="w3-left w3-btn" href="2.%20Syntax.html">« Previous</a> 
+              <a class="w3-right w3-btn" href="4.%20Echo%20and%20Print.html">Next »</a> 
+            </div>
             <hr>
             <p class="intro">변수(variables)는 정보를 저장하기 위한 "그릇(container)" 이다 :</p>
             <div class="w3-example">
@@ -236,9 +234,10 @@
               것입니다.&nbsp;&nbsp;</p>
             <p><b>Note:</b> 변수는 여전히 함수에 대하여 로컬범위 입니다.&nbsp;</p>
             <br>
-            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="PHP%205%20Syntax.html">«
-                Previous</a> <a class="w3-right w3-btn" href="PHP%205%20Echo%20and%20Print%20Statements.html">Next
-                Chapter »</a> </div>
+            <div class="w3-clear nextprev"> 
+              <a class="w3-left w3-btn" href="2.%20Syntax.html">« Previous</a> 
+              <a class="w3-right w3-btn" href="4.%20Echo%20and%20Print.html">Next »</a> 
+            </div>
             <hr> </div>
         </div>
       </div>
