--- a/9. if...else...elseif Statements.html
+++ b/9. if...else...elseif Statements.html
@@ -18,7 +18,7 @@
             <div class="w3-clear nextprev"> 
               <a class="w3-left w3-btn" href="8.%20Operators.html">«
                 Previous</a> 
-                <a class="w3-right w3-btn" href="10%20while%20Loops.html">Next »</a> 
+                <a class="w3-right w3-btn" href="10.%20while%20Loops.html">Next »</a> 
               </div>
             <hr>
             <p class="intro">조건 문장(Conditional statements)은 서로 다른 조건에 따라 서로 다른
@@ -194,7 +194,7 @@
             <div class="w3-clear nextprev"> 
               <a class="w3-left w3-btn" href="8.%20Operators.html">«
                 Previous</a> 
-                <a class="w3-right w3-btn" href="10%20while%20Loops.html">Next »</a> 
+                <a class="w3-right w3-btn" href="10.%20while%20Loops.html">Next »</a> 
               </div>
           </div>
         </div>
