--- a/SQL-3. Introduction.html
+++ b/SQL-3. Introduction.html
@@ -16,7 +16,7 @@
             <h1> <span class="color_h1">MySQL Introduction</span></h1>
             <div class="chapter">
               <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-1.%20Introduction.html">«
-                  Previous</a> <a class="w3-right w3-btn" href="SQL-4%20Connect%20to%20the%20MySQL%20Server.html">Next »</a> </div>
+                  Previous</a> <a class="w3-right w3-btn" href="SQL-4.%20Connect%20to%20the%20MySQL%20Server.html">Next »</a> </div>
             </div>
             <hr>
             <p class="intro">PHP 로 데이터베이스(databases)에 연결하고, 조작을 할 수 있다.&nbsp;</p>
@@ -82,7 +82,7 @@
             </p>
             <div class="chapter">
               <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-1.%20Introduction.html">«
-                  Previous</a> <a class="w3-right w3-btn" href="SQL-4%20Connect%20to%20the%20MySQL%20Server.html">Next »</a> </div>
+                  Previous</a> <a class="w3-right w3-btn" href="SQL-4.%20Connect%20to%20the%20MySQL%20Server.html">Next »</a> </div>
             </div>
             <hr> </div>
         </div>
