--- a/SQL-6. Select.html
+++ b/SQL-6. Select.html
@@ -15,7 +15,7 @@
           <div id="main" style="width:auto">
             <h1>SQL-6. <span class="color_h1">Select</span></h1>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-5.%20Insert%20Into.html">«
-                Previous</a> <a class="w3-right w3-btn" href="SQL-7%20Where.html">Next  »</a> </div>
+                Previous</a> <a class="w3-right w3-btn" href="SQL-7.%20Where.html">Next  »</a> </div>
             <hr>
             <p class="intro">SELECT 문은 데이타베이스로부터 데이타를 선택하는데 사용됩니다.</p>
             <hr>
@@ -122,7 +122,7 @@
             </table>
             <br>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-5.%20Insert%20Into.html">«
-                Previous</a> <a class="w3-right w3-btn" href="SQL-7%20Where.html">Next  »</a> </div>
+                Previous</a> <a class="w3-right w3-btn" href="SQL-7.%20Where.html">Next  »</a> </div>
             <hr> </div>
         </div>
       </div>
