--- a/SQL-5. Insert Into.html
+++ b/SQL-5. Insert Into.html
@@ -14,7 +14,7 @@
         <div>
           <div id="main" style="width:auto">
             <h1>SQL-5. <span class="color_h1">Insert Into</span></h1>
-            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-4.%20Create%20Database%20and%20Tables.html">«
+            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-4.%20Connect%20to%20the%20MySQL%20Server.html">«
                 Previous</a> <a class="w3-right w3-btn" href="SQL-6.%20Select.html">Next  »</a> </div>
             <hr>
             <p class="intro">INSERT INTO 문은 테이블에 새로운 레코드를 삽입하는데 사용된다.&nbsp;</p>
@@ -114,7 +114,7 @@
             </div>
             <br>
             <br>
-            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-4.%20Create%20Database%20and%20Tables.html">«
+            <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-4.%20Connect%20to%20the%20MySQL%20Server.html">«
                 Previous</a> <a class="w3-right w3-btn" href="SQL-6.%20Select.html">Next  »</a> </div>
             <hr> </div>
         </div>
