--- a/SQL-10.  Delete From.html
+++ b/SQL-10.  Delete From.html
@@ -16,11 +16,9 @@
             <h1>SQL-10. <span class="color_h1">Delete</span></h1>
             <div class="chapter">
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-9.%20Update.html">«
-                Previous</a> <a class="w3-right w3-btn" href="SQL-1.%20Introduction.html">Next  »</a> </div>
+                Previous</a> <a class="w3-right w3-btn" href="SQL-1.%20SQL.html">Next  »</a> </div>
             </div>
           </div>
-          <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="PHP%20MySQL%20Update.html">«
-              Previous</a> </div>
           <hr>
           <p class="intro">DELETE 문은 테이블에서 레코드를 삭제하는 데 사용됩니다.</p>
           <hr>
@@ -101,7 +99,7 @@
           </table>
           <br>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="SQL-9.%20Update.html">«
-                Previous</a> <a class="w3-right w3-btn" href="SQL-1.%20Introduction.html">Next  »</a> </div>
+                Previous</a> <a class="w3-right w3-btn" href="SQL-1.%20SQL.html">Next  »</a> </div>
         </div>
         <hr> </div>
     </div>
