--- a/Ex-1. PHP practice.html
+++ b/Ex-1. PHP practice.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <!-- saved from url=(0046)http://jun.hansung.ac.kr/SWP/Exercise/ex3.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     
     <title>ex3.html</title>
   </head>
   <body>
     <h2> Homework #1&nbsp; </h2>
     <ol>
-      <li>[Echo] "Server Web Programming" À» html page ÀÇ &lt;h2&gt; Á¦¸ñÀ¸·Î ³Ö°í, ¸µÅ©¸¦
-        ¸¸µé¾î¼­ Å¬¸¯ÇÏ¸é "http://jun.hansung.ac.kr/SWP/"·Î ÀÌµ¿ÇÏµµ·Ï&nbsp; php code¸¦ ÀÛ¼ºÇÏ½Ã¿À.<br>
+      <li>[Echo] "Server Web Programming" ì„ html page ì˜ &lt;h2&gt; ì œëª©ìœ¼ë¡œ ë„£ê³ , ë§í¬ë¥¼
+        ë§Œë“¤ì–´ì„œ í´ë¦­í•˜ë©´ "http://jun.hansung.ac.kr/SWP/"ë¡œ ì´ë™í•˜ë„ë¡&nbsp; php codeë¥¼ ì‘ì„±í•˜ì‹œì˜¤.<br>
         <br>
       </li>
-      <li>[String] email ÁÖ¼Ò¿¡¼­ @ ¾ÕÀÇ »ç¿ëÀÚ ÀÌ¸§¸¸À» ÃßÃâÇÏ´Â php code¸¦ ÀÛ¼ºÇÏ½Ã¿À. ( hint:
+      <li>[String] email ì£¼ì†Œì—ì„œ @ ì•ì˜ ì‚¬ìš©ì ì´ë¦„ë§Œì„ ì¶”ì¶œí•˜ëŠ” php codeë¥¼ ì‘ì„±í•˜ì‹œì˜¤. ( hint:
         strpos() &amp;&nbsp; subsrt() or strstr() )<br>
-        ÀÔ·Â: jun@hansung.ac.kr<br>
-        Ãâ·Â: jun<br>
+        ì…ë ¥: jun@hansung.ac.kr<br>
+        ì¶œë ¥: jun<br>
         <br>
       </li>
-      <li> [String] "072506" ¿Í °°Àº stringÀ» "07:25:06"ÀÇ ÇüÅÂ·Î ºĞ¸®ÇÏ´Â php ÄÚµå¸¦ ÀÛ¼ºÇÏ½Ã¿À (
+      <li> [String] "072506" ì™€ ê°™ì€ stringì„ "07:25:06"ì˜ í˜•íƒœë¡œ ë¶„ë¦¬í•˜ëŠ” php ì½”ë“œë¥¼ ì‘ì„±í•˜ì‹œì˜¤ (
         hint: chunk_split() ).<br>
         <br>
       </li>
-      <li>[String] URL ÀÇ ¸¶Áö¸· / ´ÙÀ½ÀÇ ¹®ÀÚµéÀ» ¹İÈ¯ÇÏ´Â php code ¸¦ ÀÛ¼ºÇÏ½Ã¿À. ( hint: substr(),
+      <li>[String] URL ì˜ ë§ˆì§€ë§‰ / ë‹¤ìŒì˜ ë¬¸ìë“¤ì„ ë°˜í™˜í•˜ëŠ” php code ë¥¼ ì‘ì„±í•˜ì‹œì˜¤. ( hint: substr(),
         strrpos() ) <br>
-        ÀÔ·Â URL =&gt; http://jun.hansung.ac.kr/SWP<br>
-        Ãâ·Â =====&gt; SWP<br>
+        ì…ë ¥ URL =&gt; http://jun.hansung.ac.kr/SWP<br>
+        ì¶œë ¥ =====&gt; SWP<br>
         <br>
       </li>
-      <li>[Loop] ´ÙÀ½°ú °°ÀÌ Å©±â°¡ º¯ÇÏ´Â Á¦¸ñµéÀ» php ÀÇ while, do-while, ¿Í&nbsp; for loop ¸¦
-        »ç¿ëÇÏ¿© °¢°¢ ±¸ÇöÇÏ½Ã¿À.<br>
+      <li>[Loop] ë‹¤ìŒê³¼ ê°™ì´ í¬ê¸°ê°€ ë³€í•˜ëŠ” ì œëª©ë“¤ì„ php ì˜ while, do-while, ì™€&nbsp; for loop ë¥¼
+        ì‚¬ìš©í•˜ì—¬ ê°ê° êµ¬í˜„í•˜ì‹œì˜¤.<br>
         <h1>Heading 1 example</h1>
         <h2>Heading 2 example</h2>
         <h3>Heading 3 example</h3>
@@ -37,7 +37,7 @@
         <h6>Heading 6 example</h6>
       </li>
       <li>
-        <p> [Loop] ´ÙÀ½°ú °°Àº&nbsp; tableÀ» php ÀÇ for loop ¸¦ »ç¿ëÇÏ¿© ¸¸µå½Ã¿À. </p>
+        <p> [Loop] ë‹¤ìŒê³¼ ê°™ì€&nbsp; tableì„ php ì˜ for loop ë¥¼ ì‚¬ìš©í•˜ì—¬ ë§Œë“œì‹œì˜¤. </p>
         <table style="width: 940px; height: 82px;" border="1">
           <tbody>
             <tr>
@@ -67,7 +67,7 @@
         </p>
       </li>
       <li>
-        <p>[Loop]&nbsp; ´ÙÀ½°ú °°Àº ±¸±¸´Ü Ç¥¸¦ php loop ¸¦ ÀÌ¿ëÇØ¼­ ¸¸µå½Ã¿À.</p>
+        <p>[Loop]&nbsp; ë‹¤ìŒê³¼ ê°™ì€ êµ¬êµ¬ë‹¨ í‘œë¥¼ php loop ë¥¼ ì´ìš©í•´ì„œ ë§Œë“œì‹œì˜¤.</p>
         <table style="width: 366px; height: 108px;" border="1">
           <tbody>
             <tr>
@@ -105,9 +105,9 @@
       <br>
       <br>
       <li>
-        <p>[Loop] ÇĞ»ıÀÌ¸§°ú ¼ºÀû ¹è¿­
-          $midterm={'Kim'=&gt;98,'Lee'=&gt;34,'Park'=&gt;55,...} (±æÀÌ°¡ 20 ÀÌ µÇµµ·Ï
-          ÀÛ¼ºÇÑ ÈÄ) À» foreach loop¸¦ »ç¿ëÇÏ¿© ´ÙÀ½°ú °°ÀÌ ¼ºÀû ¼ø¼­·Î Ãâ·ÂÇÏ½Ã¿À</p>
+        <p>[Loop] í•™ìƒì´ë¦„ê³¼ ì„±ì  ë°°ì—´
+          $midterm={'Kim'=&gt;98,'Lee'=&gt;34,'Park'=&gt;55,...} (ê¸¸ì´ê°€ 20 ì´ ë˜ë„ë¡
+          ì‘ì„±í•œ í›„) ì„ foreach loopë¥¼ ì‚¬ìš©í•˜ì—¬ ë‹¤ìŒê³¼ ê°™ì´ ì„±ì  ìˆœì„œë¡œ ì¶œë ¥í•˜ì‹œì˜¤</p>
         <p>Student Kim's score is "98"<br>
           Student Park's score is "55"<br>
           Student Lee's score is "34"<br>
@@ -115,12 +115,12 @@
           <br>
         </p>
       </li>
-      <li>[Function] Àü´ŞµÇ´Â ¼ıÀÚÀÇ ÆåÅä¸®¾ó °ª (¿¹: 5! = 5x4x3x2x1 = 120 )À» ¹İÈ¯ÇÏ´Â function
-        factorial()À» ÀÛ¼ºÇÏ½Ã¿À. (hint: use recursive )<br>
+      <li>[Function] ì „ë‹¬ë˜ëŠ” ìˆ«ìì˜ í™í† ë¦¬ì–¼ ê°’ (ì˜ˆ: 5! = 5x4x3x2x1 = 120 )ì„ ë°˜í™˜í•˜ëŠ” function
+        factorial()ì„ ì‘ì„±í•˜ì‹œì˜¤. (hint: use recursive )<br>
         <br>
       </li>
-      <li>[Function] Àü´ŞµÇ´Â Á¤¼ö°¡ ¼Ò¼ö(prime number: ÀÚ½Å°ú 1¸¸À¸·Î ³ª´©¾îÁö´Â ¼ö) ÀÌ¸é 1, ¾Æ´Ï¸é 0 À»
-        ¹İÈ¯ ÇÏ´Â function isPrime()À» ÀÛ¼ºÇÏ½Ã¿À. (hint:&nbsp; % ¿¬»ê )</li>
+      <li>[Function] ì „ë‹¬ë˜ëŠ” ì •ìˆ˜ê°€ ì†Œìˆ˜(prime number: ìì‹ ê³¼ 1ë§Œìœ¼ë¡œ ë‚˜ëˆ„ì–´ì§€ëŠ” ìˆ˜) ì´ë©´ 1, ì•„ë‹ˆë©´ 0 ì„
+        ë°˜í™˜ í•˜ëŠ” function isPrime()ì„ ì‘ì„±í•˜ì‹œì˜¤. (hint:&nbsp; % ì—°ì‚° )</li>
     </ol>
   
 
