--- a/Ex-3. PHP practice.html
+++ b/Ex-3. PHP practice.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0046)http://jun.hansung.ac.kr/SWP/Exercise/ex4.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     
     <title>Exercise - date and time - week 5</title>
   </head>
@@ -8,13 +8,13 @@
     <h2>Homework #3</h2>
     <br>
     <ol>
-      <li>[Date] Server Web Programming ¼ö¾÷Àº 8¿ù29ÀÏºÎÅÍ ½ÃÀÛÇÏ¿© ¸ÅÁÖ ¿ù¿äÀÏ(Á¤±Ô)°ú ¸ñ¿äÀÏ(º¸Á¶)
-        15ÁÖ°£ °è¼Ó µË´Ï´Ù. ¼ö¾÷ÀÌ ÀÖ´Â ³¯À» Â÷·Ê´ë·Î Ãâ·ÂÇÏ´Â php ÄÚµå¸¦ ÀÛ¼ºÇÏ½Ã¿À.<br>
+      <li>[Date] Server Web Programming ìˆ˜ì—…ì€ 8ì›”29ì¼ë¶€í„° ì‹œìž‘í•˜ì—¬ ë§¤ì£¼ ì›”ìš”ì¼(ì •ê·œ)ê³¼ ëª©ìš”ì¼(ë³´ì¡°)
+        15ì£¼ê°„ ê³„ì† ë©ë‹ˆë‹¤. ìˆ˜ì—…ì´ ìžˆëŠ” ë‚ ì„ ì°¨ë¡€ëŒ€ë¡œ ì¶œë ¥í•˜ëŠ” php ì½”ë“œë¥¼ ìž‘ì„±í•˜ì‹œì˜¤.<br>
         <br>
         <br>
       </li>
-      <li>[Date] »ýÀÏ Ä«¿îÆ®´Ù¿îÀ» ÇÏ´Â ½ºÅ©¸³Æ®¸¦ ÀÛ¼ºÇÏ½Ã¿À. »ç¿ëÀÚ·ÎºÎÅÍ »ýÀÏÀÇ ¿ù°ú ÀÏÀ» ÀÔ·Â¹ÞÀº ÈÄ, ÇöÀç ³¯Â¥¿Í »ýÀÏ
-        »çÀÌÀÇ ³¯Â¥ ¼ö¸¦ Ä«¿îÆ®ÇØ¼­ Ãâ·ÂÇÏ°Ô ÇÏ½Ã¿À.</li>
+      <li>[Date] ìƒì¼ ì¹´ìš´íŠ¸ë‹¤ìš´ì„ í•˜ëŠ” ìŠ¤í¬ë¦½íŠ¸ë¥¼ ìž‘ì„±í•˜ì‹œì˜¤. ì‚¬ìš©ìžë¡œë¶€í„° ìƒì¼ì˜ ì›”ê³¼ ì¼ì„ ìž…ë ¥ë°›ì€ í›„, í˜„ìž¬ ë‚ ì§œì™€ ìƒì¼
+        ì‚¬ì´ì˜ ë‚ ì§œ ìˆ˜ë¥¼ ì¹´ìš´íŠ¸í•´ì„œ ì¶œë ¥í•˜ê²Œ í•˜ì‹œì˜¤.</li>
     </ol>
   
 
