--- a/1. Introduction.html
+++ b/1. Introduction.html
@@ -40,8 +40,9 @@
                   <th style="width:34px"><img src="http://www.w3schools.com/images/lamp.jpg"
 
                       alt="Note" style="height:32px;width:32px"></th>
-                  <td>&nbsp; PHP 는 초보자에게는 간단하며, 또한 전문 프로그래머를 위한 다양한 고급 기능을
-                    제공합니다.</td>
+                  <td>&nbsp; 웹에서 가장 큰 블로깅 시스템 (WordPress)의 핵심이 될만큼 강력합니다! </td>
+                  <td>&nbsp; 가장 큰 소셜 네트워크 (Facebook)를 운영하기에 충분히 깊습니다!</td>
+                  <td>&nbsp; 초보자의 첫 번째 서버 측 언어가 될수 있을 정도로 쉽습니다.!.</td>
                 </tr>
               </tbody>
             </table>
