--- a/1. Introduction.html
+++ b/1. Introduction.html
@@ -98,6 +98,7 @@
               <ul>
                 <li>PHP 와 MySQL을 지원하는 웹 호스트를 찾거나, </li>
                 <li>자신의 PC에 웹 서버를 설치 한 후, PHP 와 MySQL를 설치한다.</li>
+                <li>또는, 필요한 기본 모듈들 (Apache, PHP, MySQL 등)을 모두 함께 설치해 주는, WAMP 나 XAMPP 와 같은 스택을 다운로드 받아 설치합니다.  </li>
               </ul>
               <hr>
               <h2>Use a Web Host With PHP Support</h2>
