--- a/1. Introduction.html
+++ b/1. Introduction.html
@@ -100,7 +100,7 @@
                 <li>자신의 PC에 웹 서버를 설치 한 후, PHP 와 MySQL를 설치한다.</li>
                 <li>또는, 필요한 기본 모듈들 (Apache, PHP, MySQL 등)을 모두 함께 설치해 주는, 
                   <a href="https://bitnami.com/stack/wamp/installer">WAMP</a> 나 
-                  <a href="https://www.apachefriends.org/download.html">XAMPP</a> 와 같은 스택을 다운로드 받아 설치합니다.  </li>
+                  <a href="https://www.apachefriends.org/index.html">XAMPP</a> 와 같은 스택을 다운로드 받아 설치합니다.  </li>
               </ul>
               <hr>
               <h2>Use a Web Host With PHP Support</h2>
