--- a/1. Introduction.html
+++ b/1. Introduction.html
@@ -19,7 +19,7 @@
             <hr>
             <p class="intro">&nbsp;PHP 스크립트는 서버에서 실행됩니다.</p>
             <hr>
-            <h2>What You Should Already Know</h2>
+            <h2>미리 알아야 할 </h2>
             <p>&nbsp;계속 진행하려면, 다음의 것들에 대한 기본적인 이해가 필요합니다.:</p>
             <ul>
               <li>HTML</li>
