--- a/2. Syntax.html
+++ b/2. Syntax.html
@@ -50,15 +50,12 @@
               <br>
               <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_syntax">Run
                 example »</a> </div>
-            <p><strong>Note:</strong>&nbsp; PHP 문을 세미콜론(;)으로 종료합니다. PHP 코드 블록을
-              종료 태그는 자동으로 세미콜론을 의미한다 (그래서 PHP 블록의 마지막 줄에 종료하는 세미콜론을 추가할 필요는
-              없습니다).</p>
+            <p><strong>Note:</strong>&nbsp; PHP 문을 세미콜론(;)으로 종료합니다. </p>
 
             <hr>
             <h2>PHP Case Sensitivity</h2>
             <p>PHP 에서는 모든 사용자 정의 <strong>functions</strong>, <strong>classes </strong>및
-              <strong>keywords </strong>(e.g. if, else, while, echo, etc.) 에서 <strong>대
-                소 문자를 구분하지 않습니다</strong>.</p>
+              <strong>keywords </strong>(e.g. if, else, while, echo, etc.) 에서 <strong>대소 문자를 구분하지 않습니다</strong>.</p>
             <p>아래의 예에서, 세 가지 echo 문은 합법적(같은 것) 입니다 :</p>
             <div class="w3-example">
               <h2 class="example">Example</h2>
@@ -100,11 +97,11 @@
               <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_syntax_case2">Run
                 example »</a> </div>
                         <hr>
-            <h2><strong>주석</strong>(Comments) in PHP</h2>
+            <h2><strong>주석</strong>(Comments)</h2>
             <p>PHP 코드의 주석은 프로그램의 일부로 읽히거나/실행되지 않는 줄입니다. 그것의 유일한 목적은 코드를 편집하는
               누군가에 의해 읽히는 것이다!<br>
             </p>
-            <p>PHP는 주석으로 세 가지 방법을 지원합니다 :</p>
+            <p>PHP는 주석으로 여러가지 방법을 지원합니다 :</p>
 
             <div class="w3-example">
               <h2 class="example">Example</h2>
