--- a/2. Syntax.html
+++ b/2. Syntax.html
@@ -13,7 +13,7 @@
       <div id="page" style="width:auto; padding:30px; margin:10px;">
         <div>
           <div id="main" style="width:auto">
-            <h1>2. <span class="color_h1">Syntax</span></h1>
+            <h1>2. <span class="color_h1">구문(Syntax)</span></h1>
             <div class="w3-clear nextprev"> 
               <a class="w3-left w3-btn" href="1.%20Introduction.html">« Previous</a> 
               <a class="w3-right w3-btn" href="3.%20Variables.html">Next »</a> 
