--- a/3. Variables.html
+++ b/3. Variables.html
@@ -13,20 +13,19 @@
       <div id="page" style="width:auto; padding:30px; margin:10px;">
         <div>
           <div id="main" style="width:auto">
-            <h1>3. <span class="color_h1">Variables</span></h1>
+            <h1>3. <span class="color_h1">변수(Variables)</span></h1>
             <div class="w3-clear nextprev"> 
               <a class="w3-left w3-btn" href="2.%20Syntax.html">« Previous</a> 
               <a class="w3-right w3-btn" href="4.%20Echo%20and%20Print.html">Next »</a> 
             </div>
             <hr>
-            <p class="intro">변수(variables)는 정보를 저장하기 위한 "그릇(container)" 이다 :</p>
+            <p class="intro">변수(variables)는 정보를 저장하기 위한 "그릇(container)" 입니다. PHP에서 변수는 $부호로 시작하고 그 뒤에 변수 이름이 옵니다.:</p>
             <div class="w3-example">
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> &lt;?php<br>
-                $x=5;<br>
-                $y=6;<br>
-                $z=$x+$y;<br>
-                echo $z;<br>
+                $txt = "Hello world!";<br>
+                $x = 5;<br>
+                $y = 10.5;<br>
                 ?&gt; </div>
               <br>
               <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_var4">Run
