--- a/3. Variables.html
+++ b/3. Variables.html
@@ -28,7 +28,7 @@
                 $y = 10.5;<br>
                 ?&gt; </div>
               <br>
-              <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_var4">Run
+              <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_var">Run
                 example »</a> </div>
             <hr>
             <h2><strong>대수</strong>(Algebra)와 마찬가지</h2>
