--- a/3. Variables.html
+++ b/3. Variables.html
@@ -30,6 +30,9 @@
               <br>
               <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_var">Run
                 example »</a> </div>
+            
+            <p> 위의 명령문 실행 후에는, 변수 $txt은 Hello world! 값을 갖게되며, 변수 $x는 5 값을, 변수 $y는 10.5 값을 갖.
+            </p>
             <hr>
             <h2><strong>대수</strong>(Algebra)와 마찬가지</h2>
             <p>x=5<br>
