--- a/3. Variables.html
+++ b/3. Variables.html
@@ -33,6 +33,8 @@
             
             <p> 위의 명령문 실행 후에는, 변수 $txt은 Hello world! 값을 갖게되며, 변수 $x는 5 값을, 변수 $y는 10.5 값을 갖.
             </p>
+            <p> <b>참고</b> : 텍스트 값을 변수에 할당 할 때 값을 따옴표로 묶으십시오. </p>
+            <p> <b>참고</b> : 다른 프로그래밍 언어와 달리 PHP에는 변수를 선언하는 명령이 없습니다. 값을 처음 할당하는 순간 생성됩니다. </p>
             <hr>
             <h2><strong>대수</strong>(Algebra)와 마찬가지</h2>
             <p>x=5<br>
