--- a/3. Variables.html
+++ b/3. Variables.html
@@ -36,13 +36,6 @@
             <p> <b>참고</b> : 텍스트 값을 변수에 할당 할 때 값을 따옴표로 묶으십시오. </p>
             <p> <b>참고</b> : 다른 프로그래밍 언어와 달리 PHP에는 변수를 선언하는 명령이 없습니다. 값을 처음 할당하는 순간 생성됩니다. </p>
             <hr>
-            <h2><strong>대수</strong>(Algebra)와 마찬가지</h2>
-            <p>x=5<br>
-              y=6<br>
-              z=x+y</p>
-            <p>대수에서 우리는 값을(5 같은) 저장하기 위해 문자를(x 같은) 사용합니다.</p>
-            <p>위의 식&nbsp; z=x+y 에서,&nbsp; z 의 값이 11로 계산될 수 있다.</p>
-            <p>PHP 에서 이 문자들은 <b>변수(variables)</b>라 부른다. </p>
             <table class="lamp">
               <tbody>
                 <tr>
@@ -56,7 +49,7 @@
             <br>
             <hr>
             <h2>PHP Variables</h2>
-            <p>대수(algebra)와 마찬가지로, PHP 변수는 값(x=5) 또는 식(z=x+y)를 담을 수 있습니다.</p>
+            <p>PHP 변수는 값(x=5) 또는 식(z=x+y)를 담을 수 있습니다.</p>
             <p>변수는 짧은 이름(x 와 y 처럼​​) 이나 더 자세한 설명 이름(age, carname, total_volume)일
               수 있습니다.</p>
             <p>PHP 변수 규칙:</p>
@@ -65,8 +58,7 @@
               <li>변수 이름은 <strong>문자 또는 밑줄 문자로 시작</strong>해야 니다</li>
               <li>변수 이름은 <strong>숫자로 시작할 수 없습</strong>니다</li>
               <li>변수 이름은 영문자, 숫자와 밑줄( A-z, 0-9, 과 _ )을 사용한다.</li>
-              <li>변수 이름은 <strong>대소 문자를 구분</strong>한다 ($y and $Y 두 개의 서로 다른
-                변수입니다)</li>
+              <li>변수 이름은 <strong>대소 문자를 구분</strong>한다 ($age 와 $AGE 는 두 개의 서로 다른 변수입니다)</li>
             </ul>
             <table class="lamp">
               <tbody>
