--- a/3. Variables.html
+++ b/3. Variables.html
@@ -74,6 +74,42 @@
             </table>
             <br>
             <hr>
+            <h2>출력 변수</h2>
+            <p>PHP echo 문은 종종 화면에 데이터를 출력하는 데 사용됩니다. 다음 예제는 텍스트와 변수를 출력하는 방법을 보여줍니다.</p>
+            <p>변수는 짧은 이름(x 와 y 처럼​​) 이나 더 자세한 설명 이름(age, carname, total_volume)일
+              수 있습니다.</p>
+            <div class="w3-example">
+              <h2 class="example">Example</h2>
+              <div class="w3-code notranslate"> &lt;?php<br>
+                $txt = "W3Schools.com";<br>
+                echo "I love $txt!";<br>
+                ?&gt; </div>
+              <br>
+              <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_var2">Run
+                example »</a> </div>
+            <p>다음 예제는 위의 예제와 동일한 출력을 생성합니다.</p>
+            <div class="w3-example">
+              <h2 class="example">Example</h2>
+              <div class="w3-code notranslate"> &lt;?php<br>
+                $txt = "W3Schools.com";<br>
+                echo "I love " . $txt . "!";<br>
+                ?&gt; </div>
+              <br>
+              <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_var3">Run
+                example »</a> </div>
+             <p>다음 예제는 두 변수의 합계를 출력합니다.</p>
+            <div class="w3-example">
+              <h2 class="example">Example</h2>
+              <div class="w3-code notranslate"> &lt;?php<br>
+                $x = 5;<br>
+                $y = 4;<br>
+                echo $x + $y;<br>
+                ?&gt; </div>
+              <br>
+              <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_var4">Run
+                example »</a> </div>
+            
+            <hr>
 
             <h2>PHP 는 느슨한 형식의 언어다</h2>
             <p>위의 예에서, 우리는 변수가 어떤 데이터 형식인지를 PHP 에게 말할 필요가 없음을 알 수 있습니다.&nbsp;</p>
