--- a/3. Variables.html
+++ b/3. Variables.html
@@ -115,6 +115,9 @@
             <p>위의 예에서, 우리는 변수가 어떤 데이터 형식인지를 PHP 에게 말할 필요가 없음을 알 수 있습니다.&nbsp;</p>
             <p>PHP 는 자동적으로 그 값에 따라서 정확한 데이터 형식으로 변수를 변환합니다. </p>
             <p>C, C++, 와 Java, 같은 다른 언어에서는, 프로그래머가 사용하기 전에 변수의 이름과 타입을 선언해야 합니다.</p>
+            <p> PHP 7에서는 유형 선언이 추가되었습니다. 
+                이것은 함수를 선언 할 때 예상되는 데이터 유형을 지정하는 옵션을 제공하며, 엄격한 요구 사항을 사용하면 유형 불일치에 "치명적인 오류"가 발생합니다. 
+                strict 및 non-strict 요구 사항과 데이터 유형 선언은 PHP 함수 장에서 더 공부해 본다. </p>
             <hr>
             <h2>PHP 변수 범위(Scope)</h2>
             <p>PHP 에서, 변수는 스크립트의 어느 곳에서도 선언될 수 있다.</p>
@@ -157,8 +160,7 @@
               <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_var_local">Run
                 example »</a> </div>
             <p>위의 예에서, 두 변수 $x 와 $y, 그리고 함수 myTest() 가 있습니다. $x 는 함수 외부에 선언 되어
-              있으므로 전역변수(global variable)이며, $y 는 함수 내부에 선언되어 있으므로 지역변수(local
-              variable) 이다. </p>
+              있으므로 전역변수(global variable)이며, $y 는 함수 내부에 선언되어 있으므로 지역변수(local variable) 이다. </p>
             <p>myTest() 함수 내부에서 두 변수를 출력하면, 지역적으로 선언된 $y 값은 출력하지만, 함수외부에서 생성된 $x
               의 값은 출력할 수 없습니다.&nbsp;</p>
             <p>다음, myTest() 함수 외부에서 두 변수를 출력하면, $x 의 값은 출력하지만, myTest() 함수 내부에서
