Update 4. Echo and Print.html

--- a/4. Echo and Print.html
+++ b/4. Echo and Print.html
@@ -52,14 +52,14 @@
             <div class="w3-example">
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> &lt;?php<br>
-                $txt1="Learn PHP";<br>
-                $txt2="W3Schools.com";<br>
-                $cars=array("Volvo","BMW","Toyota");<br>
+                $txt1 = "Learn PHP"; <br>
+                $txt2 = "W3Schools.com";<br>
+                $x = 5;<br>
+                $y = 4;<br>
                 <br>
-                echo $txt1;<br>
-                echo "&lt;br&gt;";<br>
-                echo "Study PHP at $txt2";<br>
-                echo "My car is a {$cars[0]}";<br>
+                echo "<h2>" . $txt1 . "</h2>";<br>
+                echo "Study PHP at " . $txt2 . "<br>";<br>
+                echo $x + $y;<br>
                 ?&gt; </div>
               <br>
               <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_echo2">Run
