Update 4. Echo and Print.html

--- a/4. Echo and Print.html
+++ b/4. Echo and Print.html
@@ -53,12 +53,12 @@
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> &lt;?php<br>
                 $txt1 = "Learn PHP"; <br>
-                $txt2 = "W3Schools.com";<br>
-                $x = 5;<br>
-                $y = 4;<br>
+                $txt2 = "W3Schools.com"; <br>
+                $x = 5; <br>
+                $y = 4; <br>
                 <br>
-                echo "<h2>" . $txt1 . "</h2>";<br>
-                echo "Study PHP at " . $txt2 . "<br>";<br>
+                echo "\<h2\>" . $txt1 . "\</h2\>"; <br>
+                echo "Study PHP at " . $txt2 . "\<br\>"; <br>
                 echo $x + $y;<br>
                 ?&gt; </div>
               <br>
@@ -93,8 +93,8 @@
                 $x = 5;<br>
                 $y = 4;<br>
                 <br>
-                print "<h2>" . $txt1 . "</h2>";<br>
-                print "Study PHP at " . $txt2 . "<br>";<br>
+                print "\<h2\>" . $txt1 . "\</h2\>";<br>
+                print "Study PHP at " . $txt2 . "\<br\>";<br>
                 print $x + $y;<br>
                 ?&gt; </div>
               <br>
