Update 4. Echo and Print.html

--- a/4. Echo and Print.html
+++ b/4. Echo and Print.html
@@ -57,8 +57,8 @@
                 $x = 5; <br>
                 $y = 4; <br>
                 <br>
-                echo "\<h2\>" . $txt1 . "\</h2\>"; <br>
-                echo "Study PHP at " . $txt2 . "\<br\>"; <br>
+                echo "&lt;h2&gt;" . $txt1 . "&lt;/h2&gt;"; <br>
+                echo "Study PHP at " . $txt2 . "&lt;br&gt;"; <br>
                 echo $x + $y;<br>
                 ?&gt; </div>
               <br>
@@ -93,8 +93,8 @@
                 $x = 5;<br>
                 $y = 4;<br>
                 <br>
-                print "\<h2\>" . $txt1 . "\</h2\>";<br>
-                print "Study PHP at " . $txt2 . "\<br\>";<br>
+                print "&lt;h2&gt;" . $txt1 . "&lt;/h2&gt;";<br>
+                print "Study PHP at " . $txt2 . "&lt;br&gt;";<br>
                 print $x + $y;<br>
                 ?&gt; </div>
               <br>
