Update 5. Data Types.html

--- a/5. Data Types.html
+++ b/5. Data Types.html
@@ -29,10 +29,11 @@
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> &lt;?php <br>
                 $x = "Hello world!";<br>
+                $y = 'Hello world!';<br>
+                <br>
                 echo $x;<br>
-                echo "&lt;br&gt;"; <br>
-                $x = 'Hello world!';<br>
-                echo $x;<br>
+                echo "&lt;br&gt;";<br>
+                echo $y;<br>
                 ?&gt;</div>
               <br>
               <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_datatypes_string">Run
