Update 5. Data Types.html

--- a/5. Data Types.html
+++ b/5. Data Types.html
@@ -52,7 +52,7 @@
                 16진수(hexadecimal :16-based - prefixed with 0x) or 8진수(octal :
                 8-based - prefixed with 0)</li>
             </ul>
-            <p>다음의 예에서 여러 다른 숫자를 시험합니다.&nbsp; PHP var_dump() 함수는 변수의 데이터 형식과 값을
+            <p>다음의 예에서 $x 는 정수입니다. &nbsp; PHP var_dump() 함수는 변수의 데이터 형식과 값을
               반환합니다.:</p>
             <div class="w3-example">
               <h2 class="example">Example</h2>
@@ -67,7 +67,7 @@
             <hr>
             <h2>PHP Floating Point Numbers</h2>
             <p>부동 소수점 숫자(floating point number)는 소수점 또는 지수 형태의 숫자이다. </p>
-            <p>다음 예에서는 여러 다른 숫자를 시험한다. PHP var_dump() 함수는 변수의 데이터 형식과 값을 반환한다.:</p>
+            <p>다음 예에서 $x 는 부동 소수점입니다. PHP var_dump() 함수는 변수의 데이터 형식과 값을 반환한다.:</p>
             <div class="w3-example">
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> &lt;?php <br>
