Update 6. String Functions.html

--- a/6. String Functions.html
+++ b/6. String Functions.html
@@ -55,7 +55,7 @@
                         
             <h2> strrev() function</h2>
             <p><strong>strrev()</strong> 함수는 문자열을 뒤집습니다.</p>
-            <p>다음의 예는 문자열&nbsp; "Hello world!"의 길이를 반환한다.:</p>
+            <p>다음의 예는 문자열 "Hello world!"를 뒤집습니다.</p>
             <div class="w3-example">
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> &lt;?php<br>
