--- a/7. Constants.html
+++ b/7. Constants.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <title>7. 상수(Constants)</title>
+    <title>7. Math  와 상수(Constants)</title>
     <style>a.menu_html_intro{font-weight:bold;}</style>
     <meta name="viewport" content="width=device-width">
     <meta name="Keywords" content="HTML,PHP,SQL,tutorial,programming,development,Web building,Webmaster">
@@ -13,12 +13,13 @@
       <div id="page" style="width:auto; padding:30px; margin:10px;">
         <div>
           <div id="main" style="width:auto">
-            <h1>7. <span class="color_h1"><strong>상수</strong>(Constants)</span></h1>
+            <h1>7. <span class="color_h1"><strong>수학과 상수</strong>(Math & Constants)</span></h1>
             <div class="w3-clear nextprev"> <a class="w3-left w3-btn" href="6.%20String%20Functions.html">«
                 Previous</a> <a class="w3-right w3-btn" href="8.%20Operators.html">Next  »</a> </div>
             
             <hr>
-            <p class="intro">상수(Constants)는 한번 정의되면 그들을 "변경"하거나 "정의되지
+            <p class="intro">PHP에는 숫자에 대한 수학적 작업을 수행 할 수있는 수학 함수 세트가 있습니다. </p>
+            <p class="intro"> 상수(Constants)는 한번 정의되면 그들을 "변경"하거나 "정의되지
               않은"(undefined) 것으로 할 수 없는 것을 제외하고는 변수(variables)와 같다.</p>
             <hr>
             <h2>PHP Constants</h2>
