--- a/11. Functions.html
+++ b/11. Functions.html
@@ -60,8 +60,8 @@
                 writeMsg(); // call the function<br>
                 ?&gt;</div>
               <br>
-              <a target="_blank" class="showbtn" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_function1">
-                Run example »</a> </div>
+              <a target="_blank" class="w3-btn w3-margin-bottom" href="http://www.w3schools.com/php/phptryit.asp?filename=tryphp_function1">
+                Run example »</a></div>
             <br>
             <hr>
             <h2>PHP <strong>함수 인수</strong>(Arguments)</h2>
