--- a/12. Arrays.html
+++ b/12. Arrays.html
@@ -50,9 +50,9 @@
             </div>
             <p>PHP 에는 배열의 세 가지 유형이 있다:</p>
             <ul>
-              <li><b>Indexed arrays</b> - 숫자 인덱스를 갖는 배열</li>
-              <li><b>Associative arrays</b> - 이름 키(named keys)를 갖는 배열 </li>
-              <li><b>Multidimensional arrays</b> - 하나 이상의 배열을 포함하는 배열</li>
+              <li><b>인덱스 배열(Indexed arrays)</b> - 숫자 인덱스를 갖는 배열</li>
+              <li><b>연관 배열(Associative arrays)</b> - 이름 키(named keys)를 갖는 배열 </li>
+              <li><b>다차원 배열(Multidimensional arrays)</b> - 하나 이상의 배열을 포함하는 배열</li>
             </ul>
             <hr>
             <h2>PHP Indexed Arrays</h2>
@@ -113,9 +113,9 @@
                 example »</a> </div>
             <br>
             <hr>
-            <h2>PHP 연계 배열(Associative Arrays)</h2>
-            <p>연계 배열(Associative arrays)은 값을 할당하는데 이름 키(named keys)를 사용하는 배열이다.</p>
-            <p>연계 배열을 생성하는 두 가지 방법이 있습니다.:&nbsp;</p>
+            <h2>PHP 연관 배열(Associative Arrays)</h2>
+            <p>연관 배열(Associative arrays)은 값을 할당하는데 이름 키(named keys)를 사용하는 배열이다.</p>
+            <p>연관 배열을 생성하는 두 가지 방법이 있습니다.:&nbsp;</p>
             <div class="code notranslate">
               <div> $age=array("Peter"=&gt;"35","Ben"=&gt;"37","Joe"=&gt;"43");</div>
             </div>
@@ -137,8 +137,8 @@
                 example »</a> </div>
             <br>
             <hr>
-            <h2>연계 배열(Associative Array)을 통한 루프 반복</h2>
-            <p>연계 배열의 모든 값들을 반복하여 출력하려면,&nbsp; 다음과 같이 foreach 루프를 사용할 수 있다. :</p>
+            <h2>연관 배열(Associative Array)을 통한 루프 반복</h2>
+            <p>연관 배열의 모든 값들을 반복하여 출력하려면,&nbsp; 다음과 같이 foreach 루프를 사용할 수 있다. :</p>
             <div class="w3-example">
               <h2 class="example">Example</h2>
               <div class="w3-code notranslate"> &lt;?php<br>
@@ -155,7 +155,7 @@
                 example »</a> </div>
             <br>
             <hr>
-            <h2>PHP - Multidimensional Arrays</h2>
+            <h2>PHP - 다차원 배열(Multidimensional Arrays)</h2>
             때때로 하나 이상의 키(key)로 값을 저장하고 싶을 수 있습니다.
             <p class="intro">이는 다차원 배열(multidimensional arrays)에 저장될 수 있다.</p>
             <hr>
