--- a/7. Constants.html
+++ b/7. Constants.html
@@ -109,16 +109,8 @@
             <h2> Complere Marh 함수 reference</h2>
             <p> 모든 Math 함수에 대한 전체 참조는 <a href="https://www.w3schools.com/php/php_ref_math.asp">Complete PHP Math Reference</a>를 참조하십시오 .
                 PHP Math 참조에는 각 함수에 대한 설명과 사용 예가 포함되어 있습니다.</p>
-            <hr>
             
-            <h2>PHP Constants</h2>
-            <p>상수는 단순한 값을 위한 식별자(이름)입니다. 그 값은 스크립트 안에서 변경 될 수 없다. </p>
-            <p>유효한 상수 이름은 문자나 밑줄(underscore)로 시작합니다 (상수 이름 앞에는 $ 기호가 없습니다.).</p>
-            <p><strong>Note:</strong> 변수와는 달리 상수는 스크립트 전체에서 자동으로 전역범위를
-              갖는다.&nbsp;</p>
-            <hr>
-            
-            <h2>Set a PHP Constant</h2>
+            <h2>PHP Constant</h2>
             <p class="intro"> 상수(Constants)는 한번 정의되면 그들을 "변경"하거나 "정의되지
               않은"(undefined) 것으로 할 수 없는 것을 제외하고는 변수(variables)와 같다.</p>
             <p>상수를 설정하려면, 세 가지 매개 변수를 취하는 define() 함수를 사용한다. : 첫 번째 매개 변수는 상수의
