Update 10. while Loops.html

--- a/10. while Loops.html
+++ b/10. while Loops.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <title>10. while / for Loops</title>
+    <title>10. Loops</title>
     <style>a.menu_html_intro{font-weight:bold;}</style>
     <meta name="viewport" content="width=device-width">
     <meta name="Keywords" content="HTML,PHP,SQL,tutorial,programming,development,Web building,Webmaster">
@@ -13,7 +13,7 @@
       <div id="page" style="width:auto; padding:30px; margin:10px;">
         <div>
           <div id="main" style="width:auto">
-            <h1>10. <span class="color_h1">while / for</span> Loops</h1>
+            <h1>10. <span class="color_h1"> Loops </span></h1>
             <div class="w3-clear nextprev"> 
               <a class="w3-left w3-btn" href="9.%20If...else...elseif%20Statements.html">«
                 Previous</a> 
